# realpaver

./: .clang-format  .gitlab-ci.yml  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README.md  TODO  config.status  configure  configure.ac  gurobi.pc  gurobi100.pc  meson.build  meson_options.txt  realpaver.geany
check/: Makefile.am  Makefile.in  bitset_test.cpp  dag_test.cpp  hc4revise_test.cpp  integer_test.cpp  interval_test.cpp  meson.build  range_test.cpp  real_matrix_test.cpp  realpaver_test.hpp  scope_test.cpp
doc/: Doxyfile.in  Makefile.am  Makefile.in  gen_params_doc.py  meson.build  mkdocs.yml  realpaver_doxygen.cfg.in  realpaver_template.hpp.cpp  realpaver_templates
doc/docs/: about.md  index.md
doc/docs/api/: index.md
doc/docs/userdoc/: install.md  interval.md  language.md  parameters.md  solve_csp.md
examples/: 2r-robot.rp  Makefile.am  Makefile.in  bop.cpp  csp.cpp  dev.cpp  interval_newton.cpp  lp.cpp  lp1.cpp  lp2.cpp  meson.build  newton.cpp  nlp.cpp  param.txt  parsing.cpp  propag.cpp  solve_2r_v1.cpp  solve_2r_v2.cpp  test.rp  uni_newton.cpp
examples/bop/: Beale.bop  Bukin.bop  Colville.bop  DropWave.bop  Eggholder.bop  GoldsteinPrice.bop  Hartmann_3.bop  Makefile  Makefile.am  Makefile.in  McCormick.bop  Rapha.bop  Rastrigin.bop  Schwefel.bop  Shubert.bop  SixHumpCamel.bop  StyblinskiTang_10.bop  StyblinskiTang_2.bop  Test.bop  ThreeHumpCamel.bop  bop_config  bop_settings  bop_solver  bop_solver.cpp  tutu
examples/bop/.deps/: bop_solver.Po
examples/bop/.libs/: bop_solver
examples/ncsp/: Apollonius  Bronstein  Brown  Brown10.rp  Brown6.rp  Broyden10  BroydenTridiagonal10.rp  Butcher  Cassou  Cassou.rp  Cassou.rpv  Combustion  DescartesFolium.rpv  Enfant1.rpv  Flower.rpv  H106  Hong1  Hong2.rp  I4.rpv  Ineq1.rp  Katsura2.rp  Katsura5.rpv  Kear11  Kin2  Kin2.rp  Kruppa  Ku  Ku.rp  Lhomme1.rp  Lhomme1.rpv  Makefile.am  Makefile.in  Nauheim  Neuro.rpv  O32.rpv  OceanCurrent  Parabola  Parabola.rpv  ParamFile  Pentagon  (+18 more)
examples/ncsp/benchmarks/: Brown5_opt.rp  Brown6.rp  Cassou.rp  Makefile.am  Rabinowitz.rp  Rueher.rp  Virasoro.rp
examples/ncsp/generators/: trigo.cpp
examples/ncsp/solutions/: Cassou.sol  Dipole.sol  Emiris.sol  Fourbar.sol  Kin2.sol  (+1 more)
ncsp/: Cpdm5.rp  Dipole.rp  Geneig.rp  Ipp.rp  Kin1.rp  Makefile.am  Makefile.in  Puma.rp  Rabinowitz.rp  meson.build  ncsp_param  ncsp_solver.cpp
ncsp/benchmarks/: Bellido.rp  Bifurcation.rp  Emiris.rp  Fourbar.rp  Geneig.rp  Katsura3.rp  Katsura5.rp  Ladders.rp  Lorentz.rp  More10.rp  Parabola.rp
ncsp/generators/: Makefile.am  katsura.cpp
ncsp/solutions/: Geneig.sol  Kapur.sol  Kin1.sol  Makefile.am
ncsp/solved/: Apollonius.sol  Bellido.sol  Bifurcation.sol  Bronstein.sol  Broyden10.sol  BroydenTridiagonal10.sol  BroydenTridiagonal100.sol  BurdenFaires.sol  Caprasse.rp  Caprasse.sol  Chemistry.sol  Chemk.rp  Chemk.sol  CzaporGeddes.sol  DescartesFolium.sol  Eco9.sol  Makefile.am
ncsp/unsolved/: BurdenFaires.rp  Chemistry.rp  CzaporGeddes.rp  Eco9.rp  Hexane.rp  I1.rp  I2.rp  Kapur.rp  Katsura6.rp  Noon5.rp  Reimer5.rp
realpaver/: Makefile.am  Makefile.in  bco_dag.cpp  bco_dag.hpp  bco_local.hpp  bco_node.cpp  bitset.cpp  box.cpp  box.hpp  common.hpp  config.hpp  constraint_fixer.hpp  contractor_bc3.cpp  contractor_bco.cpp  contractor_bco.hpp  contractor_cid.cpp  contractor_cid.hpp  contractor_hc4.cpp  contractor_int.cpp  dag.cpp  dag.hpp  double.hpp  interval.hpp  interval_slicer.cpp  interval_slicer.hpp  lp_model.cpp  lp_model.hpp  number.hpp  obj.hpp  param.hpp  parser.cpp  point.cpp  point.hpp  propagator.hpp  real_fun.hpp  realpaver_bison.cpp  realpaver_bison.hpp  realpaver_bison.output  realpaver_bison.ypp  realpaver_flex.cpp  (+14 more)
src/: Makefile.am  Makefile.in  meson.build  realpaver_api.hpp  realpaver_bco_dag.cpp  realpaver_bco_dag.hpp  realpaver_bco_local.cpp  realpaver_bco_local.hpp  realpaver_bco_model.cpp  realpaver_bco_model.hpp  realpaver_bco_node.cpp  realpaver_bco_node.hpp  realpaver_bco_space.cpp  realpaver_bco_space.hpp  realpaver_bison.cpp  realpaver_bison.ypp  realpaver_bitset.cpp  realpaver_bitset.hpp  realpaver_box.cpp  realpaver_box.hpp  realpaver_common.cpp  realpaver_common.hpp  realpaver_config.hpp  realpaver_configure.hpp.in  realpaver_constraint.cpp  realpaver_constraint.hpp  realpaver_constraint_fixer.cpp  realpaver_constraint_fixer.hpp  realpaver_constraint_relaxor.cpp  realpaver_constraint_relaxor.hpp  realpaver_contractor.cpp  realpaver_contractor.hpp  realpaver_contractor_bc3.cpp  realpaver_contractor_bc3.hpp  realpaver_contractor_bc4.cpp  realpaver_contractor_bc4.hpp  realpaver_contractor_bco.cpp  realpaver_contractor_bco.hpp  realpaver_contractor_cid.cpp  realpaver_contractor_cid.hpp  (+61 more)
src/realpaver/: AbstractRealFunction.cpp  AbstractRealFunction.hpp  AffineCreator.cpp  AffineCreator.hpp  AffineForm.cpp  AffineForm.hpp  Alias.cpp  Alias.hpp  AssertDebug.hpp  BC3Contractor.cpp  BC3Contractor.hpp  BC4Contractor.cpp  BC4Contractor.hpp  BOContractor.cpp  BOContractor.hpp  BOLocalConjugate.cpp  BOLocalConjugate.hpp  BOLocalGradient.cpp  BOLocalGradient.hpp  BOLocalSolver.cpp  BOLocalSolver.hpp  BOModel.cpp  BOModel.hpp  BONode.cpp  BONode.hpp  BOPModel.cpp  BOPModel.hpp  BOPPresolver.cpp  BOPPresolver.hpp  BOPSolver.cpp  BOPSolver.hpp  BOPresolver.cpp  BOPresolver.hpp  BOSolver.cpp  BOSolver.hpp  BOSpace.cpp  BOSpace.hpp  BOSplit.cpp  BOSplit.hpp  Bitset.cpp  (+440 more)
test/: affine_creator_test.cpp  affine_test.cpp  bitset_test.cpp  c3b_test.cpp  ctc_3b_test.cpp  ctc_affine_test.cpp  ctc_cid_test.cpp  ctc_hc4_test.cpp  ctc_loop_test.cpp  ctc_polytope_test.cpp  ctc_var_3b_test.cpp  ctc_var_cid_test.cpp  dag_test.cpp  exclusion_contractor_test.cpp  flat_function_test.cpp  hc4_test.cpp  integer_test.cpp  interval_test.cpp  ipopt_test.cpp  linearizer_test.cpp  lp_solver_test.cpp  meson.build  nlopt_test.cpp  nlp_solver_test.cpp  piecewise_test.cpp  preprocessor_test.cpp  range_test.cpp  real_function_vector_test.cpp  real_matrix_test.cpp  scope_test.cpp  test_config.hpp
work/: Makefile.am  Makefile.in  complex.cpp  meson.build  work.cpp
work/.deps/: work.Po
(+230 files in other folders)
