#-------------------------------------------------------------------------------
# Realpaver -- Realpaver is a rigorous nonlinear constraint solver based on
#              interval computations.
#-------------------------------------------------------------------------------
# Copyright (c) 2004-2016 Laboratoire d'Informatique de Nantes Atlantique,
#                         France
# Copyright (c) 2017-2024 Laboratoire des Sciences du Numérique de Nantes,
#                         France
#-------------------------------------------------------------------------------
# Realpaver is a software distributed WITHOUT ANY WARRANTY. Read the COPYING
# file for information.
#-------------------------------------------------------------------------------
# Configuration file processed by the Meson Build system.
# Author: Raphaël Chenouard
#-------------------------------------------------------------------------------

option('LP_LIB', type : 'string', value : 'Highs', description : 'Linear Programming library (Highs, Clp, Gurobi)')
option('INTERVAL_LIB', type : 'string', value : 'Gaol', description : 'Interval arithmetic library (Gaol)')
option('ASSERT', type : 'boolean', value : false, description : 'Activate assertions')
option('LOG', type : 'boolean', value : false, description : 'Activate file logging')
option('GENERATE_DOC', type : 'boolean', value: false, description : 'Activate the generation of the documentation (Doxygen)')
option('LOCAL_SOLVER', type : 'string', value : 'none', description : 'Local solver library (e.g. NLOPT)')
